tests/ui/trace_field-is-not-an-expression.stderr
error: expected an expression as argument

         = help: example syntax: `#[trace_field(argument % 2 == 0)]`

 --> tests/ui/trace_field-is-not-an-expression.rs:4:14
  |
4 | #[trace_field(struct)]
  |              ^^^^^^^^
