tests/ui/trace_field-is-not-an-expression.rs
use tracing_attributes_http::server_send;

#[server_send]
#[trace_field(struct)]
fn f() {}

fn main() {}
